src/uniandes/teolen/parserJavaCC/newParser201820/NuevoParser201820.java
/* Generated By:JavaCC: Do not edit this line. NuevoParser201820.java */
package uniandes.teolen.parserJavaCC.newParser201820;
import java.util.*;
public class NuevoParser201820 implements NuevoParser201820Constants {


HashMap<String, Integer> nameTable = new HashMap<String, Integer>();
int valorFinal;
String print;

  final public int one_line() throws ParseException {
  ArrayList <String >  nullParams =  new ArrayList <String > ();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      varDef();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DEFINE:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      funDef();
    }
    jj_consume_token(PRINT);
    jj_consume_token(25);
    exp(nullParams);
    jj_consume_token(26);
   {if (true) return 0;}
    throw new Error("Missing return statement in function");
  }

  final public void varDef() throws ParseException {
  Token  t;
ArrayList <String >  nullParams =  new ArrayList <String > ();
    jj_consume_token(VAR);
    t = jj_consume_token(NAME);
    jj_consume_token(27);
    exp(nullParams);
     if (nameTable.get(t.image) != null)  {if (true) throw new Error("Varable ya definida");}
     else  nameTable.put(t.image,-1);
  }

  final public void funDef() throws ParseException {
  Token  t,f;
  ArrayList <String >  params =  new ArrayList <String > ();
    jj_consume_token(DEFINE);
    f = jj_consume_token(NAME);
    jj_consume_token(25);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NAME:
      t = jj_consume_token(NAME);
                               params.add(t.image);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 28:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        jj_consume_token(28);
        t = jj_consume_token(NAME);
                                          if (params.indexOf(t.image) == -1)
                                params.add(t.image);
                       else
                                {if (true) throw new Error("Nombre de par\u00c3\u00a1metro repetido: "+t.image);}
      }
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(26);
    jj_consume_token(29);
    // se guarda el nombre y la aridad antes del cuerpo  de la funcion para permitir recursion
    if (nameTable.get(f.image) != null)  {if (true) throw new Error("Nombre ya definido: "+f.image);}
    else nameTable.put(f.image,params.size());
    exp(params);
  }

  final public void exp(ArrayList <String > params) throws ParseException {
    term(params);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        term(params);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        term(params);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void term(ArrayList <String > params) throws ParseException {
    fact(params);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
      case DIVIDE:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
        jj_consume_token(MULTIPLY);
        fact(params);
        break;
      case DIVIDE:
        jj_consume_token(DIVIDE);
        fact(params);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void fact(ArrayList <String > params) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      jj_consume_token(MINUS);
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NAME:
      varORcall(params);
      break;
    case INT:
      num();
      break;
    case 25:
      jj_consume_token(25);
      exp(params);
      jj_consume_token(26);
      break;
    case IF:
      condExp(params);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public int num() throws ParseException, Error {
        int total=1;
        Token token;
    token = jj_consume_token(INT);
                try {
                        total = Integer.parseInt(token.image);
                }
                catch (NumberFormatException ee)
                {
                        // Dada la forma de <ENTERO>, sabemos que solo puede tener digitos 
                        {if (true) throw new Error("Numero demasiado grande"+token.image);}
                }
                {if (true) return total;}
    throw new Error("Missing return statement in function");
  }

  final public void varORcall(ArrayList <String > params) throws ParseException, Error {
        int args=-1, def=-2;
        boolean isParam=false;
        Token token;
    token = jj_consume_token(NAME);
                      isParam = (params.indexOf(token.image) != -1);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 25:
      jj_consume_token(25);
          args++;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MINUS:
      case INT:
      case IF:
      case NAME:
      case 25:
        exp(params);
                                  args++;
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 28:
            ;
            break;
          default:
            jj_la1[10] = jj_gen;
            break label_6;
          }
          jj_consume_token(28);
          exp(params);
                                                              args++;
        }
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      jj_consume_token(26);
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
   if (isParam) {
         if (args > -1)  {if (true) throw new Error("Parametros no pueden ir seguidos de ( ):"+token.image);}
   }
   else {
                if (nameTable.get(token.image) == null) {if (true) throw new Error("Nombre indefinido: "+token.image);}
        else {
                        if (nameTable.get(token.image)==-1) {
                                if (args > -1) {if (true) throw new Error("Variables no pueden ir segudas de  ():" + token.image);}
             }
                        else {
                                if (args!=nameTable.get(token.image) )
                                    {if (true) throw new Error("Numero de argumentos invalido: "+args+" para :"+ token.image+"/"+nameTable.get(token.image));}
                        }
                }
        }
  }

  final public void condExp(ArrayList <String > params) throws ParseException, Error {
    jj_consume_token(IF);
    jj_consume_token(25);
    boolExp(params);
    jj_consume_token(28);
    exp(params);
    jj_consume_token(28);
    exp(params);
    jj_consume_token(26);
  }

  final public void boolExp(ArrayList <String > params) throws ParseException {
    boolTerm(params);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_7;
      }
      jj_consume_token(OR);
      boolTerm(params);
    }
  }

  final public void boolTerm(ArrayList <String > params) throws ParseException {
    boolFact(params);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_8;
      }
      jj_consume_token(AND);
      boolFact(params);
    }
  }

  final public void boolFact(ArrayList <String > params) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      jj_consume_token(NOT);
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 25:
      jj_consume_token(25);
      condExp(params);
      jj_consume_token(26);
      break;
    case 30:
      jj_consume_token(30);
      exp(params);
      cmpOperator();
      exp(params);
      jj_consume_token(31);
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void cmpOperator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
      jj_consume_token(EQ);
      break;
    case NEQ:
      jj_consume_token(NEQ);
      break;
    case LT:
      jj_consume_token(LT);
      break;
    case GT:
      jj_consume_token(GT);
      break;
    case LTE:
      jj_consume_token(LTE);
      break;
    case GTE:
      jj_consume_token(GTE);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  /** Generated Token Manager. */
  public NuevoParser201820TokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[18];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x40000,0x100000,0x10000000,0x1000000,0x60,0x60,0x180,0x180,0x40,0x3088000,0x10000000,0x3088040,0x2000000,0x800000,0x400000,0x200000,0x42000000,0x7e00,};
   }

  /** Constructor with InputStream. */
  public NuevoParser201820(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public NuevoParser201820(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new NuevoParser201820TokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public NuevoParser201820(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new NuevoParser201820TokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public NuevoParser201820(NuevoParser201820TokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(NuevoParser201820TokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[32];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 18; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 32; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

/*
Esto guarda -1 por cada nombre que sea una variable, y el número de argumentos si es una función
*/


}
